Fix Vercel rewrites with standard syntax

--- a/client/index_confess.html
+++ b/client/index_confess.html
@@ -18,7 +18,7 @@
       <section class="hero">
         <h1>Welcome to 0xConfess</h1>
         <p>Share anonymous short confessions tied to your wallet.</p>
-        <p><a class="btn" href="/client/wall.html">Go to Social Wall</a></p>
+        <p><a class="btn" href="/client/wall.html">Go to Wall</a></p>
       </section>
     </main>
     <script type="module" src="/client/js/app.js"></script>
